// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`border 1`] = `
<div>
  test component
  
  <div
    class="seu-radio-group"
  >
    <label
      class="seu-radio is-bordered"
      role="radio"
      tabindex="-1"
    >
      <input
        aria-hidden="true"
        class="seu-radio__original"
        tabindex="-1"
        type="radio"
        value="1"
      />
       
      <span
        class="seu-radio__input"
      >
        <span
          class="seu-radio__inner"
        />
      </span>
       
      <span
        class="seu-radio__label"
      >
        a
      </span>
    </label>
    
    <label
      class="seu-radio is-bordered"
      role="radio"
      tabindex="-1"
    >
      <input
        aria-hidden="true"
        class="seu-radio__original"
        tabindex="-1"
        type="radio"
        value="2"
      />
       
      <span
        class="seu-radio__input"
      >
        <span
          class="seu-radio__inner"
        />
      </span>
       
      <span
        class="seu-radio__label"
      >
        b
      </span>
    </label>
    
    <label
      class="seu-radio is-bordered"
      role="radio"
      tabindex="-1"
    >
      <input
        aria-hidden="true"
        class="seu-radio__original"
        tabindex="-1"
        type="radio"
        value="3"
      />
       
      <span
        class="seu-radio__input"
      >
        <span
          class="seu-radio__inner"
        />
      </span>
       
      <span
        class="seu-radio__label"
      >
        c
      </span>
    </label>
    
     
  </div>
</div>
`;

exports[`border 2`] = `
<div>
  test component
  
  <div
    class="seu-radio-group"
  >
    <label
      aria-checked="true"
      class="seu-radio is-bordered is-checked"
      role="radio"
      tabindex="0"
    >
      <input
        aria-hidden="true"
        class="seu-radio__original"
        tabindex="-1"
        type="radio"
        value="1"
      />
       
      <span
        class="seu-radio__input is-checked"
      >
        <span
          class="seu-radio__inner"
        />
      </span>
       
      <span
        class="seu-radio__label"
      >
        a
      </span>
    </label>
    
    <label
      class="seu-radio is-bordered"
      role="radio"
      tabindex="-1"
    >
      <input
        aria-hidden="true"
        class="seu-radio__original"
        tabindex="-1"
        type="radio"
        value="2"
      />
       
      <span
        class="seu-radio__input"
      >
        <span
          class="seu-radio__inner"
        />
      </span>
       
      <span
        class="seu-radio__label"
      >
        b
      </span>
    </label>
    
    <label
      class="seu-radio is-bordered"
      role="radio"
      tabindex="-1"
    >
      <input
        aria-hidden="true"
        class="seu-radio__original"
        tabindex="-1"
        type="radio"
        value="3"
      />
       
      <span
        class="seu-radio__input"
      >
        <span
          class="seu-radio__inner"
        />
      </span>
       
      <span
        class="seu-radio__label"
      >
        c
      </span>
    </label>
    
     
  </div>
</div>
`;

exports[`border 3`] = `
<div>
  test component
  
  <div
    class="seu-radio-group"
  >
    <label
      class="seu-radio is-bordered"
      role="radio"
      tabindex="-1"
    >
      <input
        aria-hidden="true"
        class="seu-radio__original"
        tabindex="-1"
        type="radio"
        value="1"
      />
       
      <span
        class="seu-radio__input"
      >
        <span
          class="seu-radio__inner"
        />
      </span>
       
      <span
        class="seu-radio__label"
      >
        a
      </span>
    </label>
    
    <label
      aria-checked="true"
      class="seu-radio is-bordered is-checked"
      role="radio"
      tabindex="0"
    >
      <input
        aria-hidden="true"
        class="seu-radio__original"
        tabindex="-1"
        type="radio"
        value="2"
      />
       
      <span
        class="seu-radio__input is-checked"
      >
        <span
          class="seu-radio__inner"
        />
      </span>
       
      <span
        class="seu-radio__label"
      >
        b
      </span>
    </label>
    
    <label
      class="seu-radio is-bordered"
      role="radio"
      tabindex="-1"
    >
      <input
        aria-hidden="true"
        class="seu-radio__original"
        tabindex="-1"
        type="radio"
        value="3"
      />
       
      <span
        class="seu-radio__input"
      >
        <span
          class="seu-radio__inner"
        />
      </span>
       
      <span
        class="seu-radio__label"
      >
        c
      </span>
    </label>
    
     
  </div>
</div>
`;

exports[`border 4`] = `
<div>
  test component
  
  <div
    class="seu-radio-group"
  >
    <label
      class="seu-radio is-bordered"
      role="radio"
      tabindex="-1"
    >
      <input
        aria-hidden="true"
        class="seu-radio__original"
        tabindex="-1"
        type="radio"
        value="1"
      />
       
      <span
        class="seu-radio__input"
      >
        <span
          class="seu-radio__inner"
        />
      </span>
       
      <span
        class="seu-radio__label"
      >
        a
      </span>
    </label>
    
    <label
      class="seu-radio is-bordered"
      role="radio"
      tabindex="-1"
    >
      <input
        aria-hidden="true"
        class="seu-radio__original"
        tabindex="-1"
        type="radio"
        value="2"
      />
       
      <span
        class="seu-radio__input"
      >
        <span
          class="seu-radio__inner"
        />
      </span>
       
      <span
        class="seu-radio__label"
      >
        b
      </span>
    </label>
    
    <label
      aria-checked="true"
      class="seu-radio is-bordered is-checked"
      role="radio"
      tabindex="0"
    >
      <input
        aria-hidden="true"
        class="seu-radio__original"
        tabindex="-1"
        type="radio"
        value="3"
      />
       
      <span
        class="seu-radio__input is-checked"
      >
        <span
          class="seu-radio__inner"
        />
      </span>
       
      <span
        class="seu-radio__label"
      >
        c
      </span>
    </label>
    
     
  </div>
</div>
`;
